# Gas-Source-Localization

./: README.md  a.out  boutCount.c  integral.c  regressionLogs  test1~
DispSim/: .cproject  .project
DispSim/launch/: basic_demo.launch
DispSim/recordedData/big_simple/: gasType0_simulation1  gasType0_simulation10  gasType0_simulation100  gasType0_simulation101  gasType0_simulation102  gasType0_simulation103  gasType0_simulation104  gasType0_simulation105  gasType0_simulation106  gasType0_simulation107  gasType0_simulation108  gasType0_simulation109  gasType0_simulation11  gasType0_simulation110  gasType0_simulation111  gasType0_simulation112  gasType0_simulation113  gasType0_simulation114  gasType0_simulation115  gasType0_simulation116  gasType0_simulation117  gasType0_simulation118  gasType0_simulation119  gasType0_simulation12  gasType0_simulation120  gasType0_simulation121  gasType0_simulation122  gasType0_simulation123  gasType0_simulation124  gasType0_simulation125  gasType0_simulation126  gasType0_simulation127  gasType0_simulation128  gasType0_simulation129  gasType0_simulation13  gasType0_simulation130  gasType0_simulation131  gasType0_simulation132  gasType0_simulation133  gasType0_simulation134  (+113 more)
DispSim/recordedData/small_simple/: gasType0_simulation1  gasType0_simulation10  gasType0_simulation100  gasType0_simulation101  gasType0_simulation102  gasType0_simulation103  gasType0_simulation104  gasType0_simulation105  gasType0_simulation106  gasType0_simulation107  gasType0_simulation108  gasType0_simulation109  gasType0_simulation11  gasType0_simulation110  gasType0_simulation111  gasType0_simulation112  gasType0_simulation113  gasType0_simulation114  gasType0_simulation115  gasType0_simulation116  gasType0_simulation117  gasType0_simulation118  gasType0_simulation119  gasType0_simulation12  gasType0_simulation120  gasType0_simulation121  gasType0_simulation122  gasType0_simulation123  gasType0_simulation124  gasType0_simulation125  gasType0_simulation126  gasType0_simulation127  gasType0_simulation128  gasType0_simulation129  gasType0_simulation13  gasType0_simulation130  gasType0_simulation131  gasType0_simulation132  gasType0_simulation133  gasType0_simulation134  (+264 more)
DispSim/src/dispersion_simulation/: CMakeLists.txt  package.xml
DispSim/src/dispersion_simulation/include/dispersion_simulation/: algorithm.h  filament.h  flow_reader.h  hit_rate.h  main.h
DispSim/src/dispersion_simulation/src/: Filamentproperties.cpp  algorithm.c  filament.c  flow_reader.c  hit_rate.c  main.cpp  mtwist.c
DispSim/src/environment/: CMakeLists.txt  configuration_dispsim.rviz
DispSim/src/environment/include/environment/: environment.h
DispSim/src/msgs_and_srvs/: CMakeLists.txt
DispSim/src/msgs_and_srvs/msg/: SourceLoc.msg
DispSim/src/simulated_mox/: CMakeLists.txt
DispSim/src/simulated_mox/include/simulated_mox/: fake_MOX.h
DispSim/src/simulated_tdlas/: CMakeLists.txt  package.xml
DispSim/src/simulated_tdlas/dispersion_simulation/: CMakeLists.txt  package.xml
DispSim/src/simulated_tdlas/dispersion_simulation/include/dispersion_simulation/: Filamentproperties.h  configuration.h  environment.h  flow.h  global.h
DispSim/src/simulated_tdlas/dispersion_simulation/src/: configuration.c  environment.c  flow.c  flow_reader.c  foamToFilament.c  global.c  utility.c
DispSim/src/simulated_tdlas/environment/src/: environment.cpp
DispSim/src/simulated_tdlas/include/simulated_tdlas/: fake_tdlas.h  listener.h
DispSim/src/simulated_tdlas/simulated_mox/: package.xml
DispSim/src/simulated_tdlas/simulated_mox/src/: fake_MOX.cpp
DispSim/src/simulated_tdlas/src/: fake_tdlas.cpp  listener.cpp
e_nose/: .cproject  .project  CMakeLists.txt  package.xml
e_nose/msg/: ENoseData.msg
e_nose/src/: CharCircularBuffer.cpp  CharCircularBuffer.h  ConfigHandler.cpp  ConfigHandler.h  TermComm.cpp  TermComm.h  main.cpp
e_nose/srv/: RLoadConfig.srv  VoltageConfig.srv
gas_concentration_visualization/: CMakeLists.txt  package.xml
gas_concentration_visualization/include/gas_concentration_visualization/: gas_concentration_visualization.h  gas_concentration_visualization.h~  gas_map.h
gas_concentration_visualization/launch/: demo_gasConcentrationVisualization_positionA.launch  demo_gasConcentrationVisualization_positionB.launch  demo_gasConcentrationVisualization_positionC.launch  demo_mox_positionC.launch  demo_viz.launch
gas_concentration_visualization/src/: gas_concentration_visualization.cpp  gas_map.cpp
gas_concentration_visualization/srv/: SensorPositionViz.srv
logs/: 1m_1.csv  1m_1.csv~  1m_1_results  1m_2.csv  1m_2.csv~  1m_2_results  2m_1.csv  2m_1.csv~  2m_1_results  2m_2.csv  2m_2.csv~  2m_2_results  3m_1.csv  3m_1.csv~  3m_2.csv  3m_2.csv~  4m_1.csv  4m_1.csv~  4m_2.csv  4m_2.csv~  untitled.m
logs/logs/: 10-14.5_6-15_bout_logs  20_7_bout_logs  30-35_8-12_bout_logs  6-10_8-12_bout_logs  complex_logs  original_bout_logs_src_8_10_3_near_wall_crashed  original_wind_logs_src_8_10_3_near_wall_crashed  small_simple_bout_logs_src_2_2_3  small_simple_good_ewma_bout_logs  small_simple_wind_logs_src_2_2_3
logs/logs/bouts/2.5m-0.1/1/: PID.csv~  PID~  asdf~  boutLogs.csv  boutLogs~  windLogs.csv
logs/logs/bouts/2.5m-0.1/2/: PID.csv  asdf~  boutLogs.csv  boutLogs~  windLogs.csv
logs/logs/bouts/2.5m-0.3/1/: PID.csv  asdf~  boutLogs.csv  boutLogs~  windLogs.csv
logs/logs/bouts/2.5m-0.3/2/: PID.csv  asdf~  boutLogs.csv  (+2 more)
read_wind/: CMakeLists.txt  package.xml
read_wind/include/read_wind/: main.h
read_wind/src/: main.cpp
read_wind/srv/: WindData.srv
regression/: CMakeLists.txt  package.xml
regression/include/regression/: Bout.h  DataHandler.h  GMap.h  GaussianRegression.h  KernelFunction.h  Position.h  Utilities.h  Wind.h  WindAvg.h
regression/src/: Bout.cpp  DataHandler.cpp  GMap.cpp  GaussianRegression.cpp  KernelFunction.cpp  Wind.cpp  WindAvg.cpp  main.cpp
regression/srv/: GetSnapshot.srv  SetSnapshot.srv
test1/: sensingLocations  sensingLocations~  viz.m
test2/: sensingLocations  sensingLocations~
test3/: sensingLocations  sensingLocations~  viz.m
(+73 files in other folders)
