<?xml version="1.0"?>
<package>
  <name>e_nose</name>
  <version>0.0.0</version>
  <description>The e_nose ROS driver package</description>
  <maintainer email="mikel.vuka@mail.polimi.it">Mikel Vuka</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/e_nose</url> -->
  <author email="mikel.vuka@mail.polimi.it">Mikel Vuka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  

</package>

